using MasterMind.Controllers;

namespace MasterMind.Views.Graphics
{
    public class GraphicsView : View
    {
        public GraphicsView() {}

        public override void visit(StartController startController)
        {
            throw new System.NotImplementedException();
        }

        public override void visit(PlayController playController)
        {
            throw new System.NotImplementedException();
        }

        public override void visit(ResumeController resumeController)
        {
            throw new System.NotImplementedException();
        }
    }
}
