@startuml

abstract class MasterMinde {
    - Logic logic
    - View view

    + MasterMinde()
    # abstract View CreateView(Logic logic)
    + void Play()
}

class ConsoleMasterMinde {
}

class GraphicsMasterMinde {
}


package MasterMind.Models {

    class Board {
        - {static} int MAX_ATTEMPTS
        - SecretCombination secretCombination
        - List<ProposedCombination> proposedCombinations
        - List<Result> results
        - int attempts

        + Board()
        + void Reset()
        + void AddProposedCombination(ProposedCombination proposedCombination)
        + Boolean IsWinner()
        + Boolean IsLooser()
        + Boolean IsFinished()
        + int GetAttemps()
        + Result GetResult(int position)
        + ProposedCombination GetProposedCombination(int position)
    }

    abstract class Combination {
        - {static} readonly int WIDTH
        # List<Color> Colors

        # Combination()
        + {static} int GetWidth()
    }

    class ProposedCombination {
        + Boolean Contains(Color color, int position)
        + Boolean Contains(Color color)
        + List<Color> GetColors()
    }

    class Result {
        + const int WIDTH
        - int blacks
        - int whites

        + Result(int blacks, int whites)
        + Boolean IsWinner()
        + int GetWhites()
        + int GetBlacks()
    }

    class SecretCombination {
        + SecretCombination()
        + Result GetResult(ProposedCombination proposedCombination)
    }

    class State {
        - StateValue stateValue
        + State()
        + void Reset()
        + void Next()
        + StateValue GetStateValue()
    }

}

package MasterMind.Utils {

    class Consola {
        - {static} readonly Consola console

        + {static} Consola GetInstance()
        + String ReadString(String title)
        + String ReadString()
        + int ReadInt(String title)
        + char ReadChar(String title)
        + void WriteLine()
        + void Write(String cadena)
        + void WriteLine(String cadena)
        + void Write(char character)
    }

    class YesNoDialog {
        - const char AFFIRMATIVE
        - const char NEGATIVE
        - {static} readonly string SUFFIX
        - {static} readonly string MESSAGE
        - private char answer

        + Boolean Read(String message)
        - Boolean IsAfirmative()
        - char GetAnswer()
        - Boolean IsNegative()
    }

}

package MasterMind.Types {

    class Color {
        + {static} readonly Color RED
        + {static} readonly Color BLUE
        + {static} readonly Color YELLOW
        + {static} readonly Color GREEN
        + {static} readonly Color ORANGE
        + {static} readonly Color PURPLE
        + {static} readonly Color NULL
        - char initial
        - static IEnumerable<Color> Values

        - Color(char initial)
        + {static} String GetInitials()
        + {static} Color GetInstance(char character)
        + {static} int Length()
        + {static} Color Get(int index)
        + Boolean IsNull()
        + string ToString()
    }

    class Error {
        + {static} readonly Error DUPLICATED
        + {static} readonly Error WRONG_CHARACTERS
        + {static} readonly Error WRONG_LENGTH
        + {static} readonly Error NULL
        - String message

        - Error(String message)
        + Boolean IsNull()
        + string ToString()
    }

    class Message {
        + {static} readonly Message ATTEMPTS
        + {static} readonly Message RESUME
        + {static} readonly Message RESULT
        + {static} readonly Message PROPOSED_COMBINATION
        + {static} readonly Message TITLE
        + {static} readonly Message WINNER
        + {static} readonly Message LOOSER
        + {static} readonly Message SECRET
        - string value

        - Message(string message)
        + string ToString()
    }

    class StateValue {
        + {static} StateValue INITIAL
        + {static} StateValue IN_GAME
        + {static} StateValue RESUME
        + {static} StateValue EXIT
        - string value
        + {static} IEnumerable<StateValue> Values

        - StateValue(String value)
        + int Ordinal()
        + String ToString()
    }

}

package MasterMind.Views {

    abstract class View {
        + void Interact()
    }

}

package MasterMind.Views.Console {

    class ConsoleView {
        - StartView startView
        - PlayView playView
        - ResumeView resumeView

        + ConsoleView()
    }

    class StartView {
        + void Interact(StartController startController)
    }

    class SecretCombinationView {
        - Controller controller;
        + SecretCombinationView(Controller controller)
        + void WriteLine()
    }

    class ResumeView {
        + void Interact(ResumeController resumeController)
    }

    class ResultView {
        - PlayController playController
        + ResultView(PlayController playController)
        + void WriteLine(int position)
    }

    class ProposedCombinationView {
        - PlayController playController
        + ProposedCombinationView(PlayController playController)
        + void Write(int position)
        + List<Color> Read()
    }

    class PlayView {
        + void Interact(PlayController playController)
    }

    class BoardView {
        - PlayController playController

        + BoardView(PlayController playController)
        + void Write()
    }

}

package MasterMind.Views.Graphics {

    class GraphicsView {
        + GraphicsView(Controller controller) )
    }

}

package MasterMind.Controllers {

    class Logic {
        - Board board
        - State state
        - Dictionary<StateValue, Controller> controllers

        + Logic()
        + Controller GetController()
    }

    abstract class Controller {
        # Board Board
        # State state
        + Controller(Board board, State state)
        + int GetWidth()
        + void Next()
        + abstract bool IsNull()
    }

    class PlayController {
        + PlayController(Board board, State state)
        + void AddProposedCombination(List<Color> combination)
        + int GetBlacksResult(int position)
        + int GetWhitesResult(int position)
        + List<Color> GetColorsProposedCombination(int position)
        + int GetAttemps()
        + bool IsFinished()
        + Error CheckError(string combination)
        + bool IsLooser()
        + bool IsWinner()
    }

    class ResumeController {
        + ResumeController(Board board, State state)
        + void Reset()
    }

    class StartController {
        + StartController(Board board, State state)
    }

    class NullController {
        + NullController(Board board, State state)
    }

}

MasterMinde *--> View
MasterMinde *--> Logic
MasterMinde ..> Controller

MasterMinde <|-- ConsoleMasterMinde
MasterMinde <|-- GraphicsMasterMinde

Logic *--> Board
Logic *--> State
Logic o--> Controller

Logic ..> StartController
Logic ..> PlayController
Logic ..> ResumeController
Logic ..> NullController
Logic ..> StateValue

Controller *--> Board
Controller *--> State
Controller ..> Combination

Controller <|-- StartController
Controller <|-- PlayController
Controller <|-- ResumeController
Controller <|-- NullController

PlayController ..> Color
PlayController ..> ProposedCombination
PlayController ..> Error

GraphicsMasterMinde ..> GraphicsView
ConsoleMasterMinde ..> ConsoleView

View ..> Controller

View <|-- GraphicsView
View <|-- ConsoleView

ConsoleView *--> StartView
ConsoleView *--> PlayView
ConsoleView *--> ResumeView
ConsoleView ..> StartController
ConsoleView ..> PlayController
ConsoleView ..> ResumeController

StartView ..> StartController
StartView ..> Consola
StartView ..> SecretCombinationView
StartView ..> Message

SecretCombinationView *--> Controller
SecretCombinationView ..> Consola
SecretCombinationView ..> Message

ResumeView *--> ResumeController
ResumeView ..> YesNoDialog
ResumeView ..> Message

ResultView *--> PlayController
ResultView ..> Consola
ResultView ..> Message

ProposedCombinationView *--> PlayController
ProposedCombinationView ..> Color
ProposedCombinationView ..> Consola
ProposedCombinationView ..> Error
ProposedCombinationView ..> Message

PlayView ..> PlayController
PlayView ..> ProposedCombinationView
PlayView ..> BoardView

BoardView *--> PlayController
BoardView ..> SecretCombinationView
BoardView ..> ProposedCombinationView
BoardView ..> ResultView
BoardView ..> Consola
BoardView ..> Message

YesNoDialog ..> Consola

Board *--> SecretCombination
Board o--> ProposedCombination
Board o--> Result

Combination o--> Color
Combination <|-- ProposedCombination
Combination <|-- SecretCombination

SecretCombination ..> ProposedCombination
SecretCombination ..> Result

@enduml
